--- a/TestPlugin.csproj
+++ b/TestPlugin.csproj
@@ -47,11 +47,16 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Desktop\ref\Mono.Posix.dll</HintPath>
     </Reference>
+    <Reference Include="RueI">
+      <HintPath>..\..\..\..\Desktop\ref\RueI.dll</HintPath>
+    </Reference>
     <Reference Include="SemanticVersioning, Version=2.0.2.0, Culture=neutral, PublicKeyToken=a89bb7dc6f7a145c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Desktop\ref\SemanticVersioning.dll</HintPath>
     </Reference>
+    <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="UnityEngine">
       <HintPath>..\..\..\..\Desktop\ref\UnityEngine.dll</HintPath>
     </Reference>
@@ -68,6 +73,7 @@
     <Compile Include="ASMATIX_API\API.cs" />
     <Compile Include="ASMATIX_API\Other.cs" />
     <Compile Include="commands\Home.cs" />
+    <Compile Include="commands\Plugin_Updater.cs" />
     <Compile Include="commands\runI.cs" />
     <Compile Include="commands\star.cs" />
     <Compile Include="commands\Swap.cs" />
@@ -94,6 +100,9 @@
   <ItemGroup>
     <PackageReference Include="EXILEDOFFICIAL">
       <Version>8.11.0</Version>
+    </PackageReference>
+    <PackageReference Include="RueI">
+      <Version>2.1.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
