--- a/TestPlugin.csproj
+++ b/TestPlugin.csproj
@@ -72,30 +72,31 @@
   <ItemGroup>
     <Compile Include="ASMATIX_API\API.cs" />
     <Compile Include="ASMATIX_API\Other.cs" />
-    <Compile Include="commands\Home.cs" />
-    <Compile Include="commands\Plugin_Updater.cs" />
-    <Compile Include="commands\runI.cs" />
-    <Compile Include="commands\star.cs" />
-    <Compile Include="commands\Swap.cs" />
-    <Compile Include="commands\Take.cs" />
-    <Compile Include="Configs\Config.cs" />
-    <Compile Include="commands\Bk.cs" />
-    <Compile Include="GoodMode\GMode.cs" />
-    <Compile Include="Handlers\PlayerHandlers.cs" />
-    <Compile Include="HUD\HUD.cs" />
-    <Compile Include="HUD\HUD_LOADER.cs" />
-    <Compile Include="Item\Dublicator.cs" />
-    <Compile Include="Item\FunGranate.cs" />
-    <Compile Include="Item\SCP420J.cs" />
-    <Compile Include="Item\Trangulizer.cs" />
-    <Compile Include="Item\Water.cs" />
-    <Compile Include="Lobby\Lobby_Fix.cs" />
-    <Compile Include="Roles\SCP-035.cs" />
-    <Compile Include="Roles\SCP-343.cs" />
-    <Compile Include="Roles\GlabalP.cs" />
+    <Compile Include="Mr_Over41\commands\Home.cs" />
+    <Compile Include="Mr_Over41\commands\Hud_Controll.cs" />
+    <Compile Include="Mr_Over41\commands\Plugin_Updater.cs" />
+    <Compile Include="Mr_Over41\commands\runI.cs" />
+    <Compile Include="Mr_Over41\commands\star.cs" />
+    <Compile Include="Mr_Over41\commands\Swap.cs" />
+    <Compile Include="Mr_Over41\commands\Take.cs" />
+    <Compile Include="Mr_Over41\Configs\Config.cs" />
+    <Compile Include="Mr_Over41\commands\Bk.cs" />
+    <Compile Include="Mr_Over41\GoodMode\GMode.cs" />
+    <Compile Include="Mr_Over41\Handlers\PlayerHandlers.cs" />
+    <Compile Include="Mr_Over41\HUD\HUD.cs" />
+    <Compile Include="Mr_Over41\HUD\HUD_LOADER.cs" />
+    <Compile Include="Mr_Over41\Item\Dublicator.cs" />
+    <Compile Include="Mr_Over41\Item\FunGranate.cs" />
+    <Compile Include="Mr_Over41\Item\SCP420J.cs" />
+    <Compile Include="Mr_Over41\Item\Trangulizer.cs" />
+    <Compile Include="Mr_Over41\Item\Water.cs" />
+    <Compile Include="Mr_Over41\Lobby\Lobby_Fix.cs" />
+    <Compile Include="Mr_Over41\Roles\SCP-035.cs" />
+    <Compile Include="Mr_Over41\Roles\SCP-343.cs" />
+    <Compile Include="Mr_Over41\Roles\GlabalP.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Roles\SCP-689.cs" />
+    <Compile Include="Mr_Over41\Roles\SCP-689.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="EXILEDOFFICIAL">
