--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 .vs/TestPlugin/FileContentIndex/067ac9d3-63cb-4fc8-8949-ca5825aa7f65.vsidx
+.vs/TestPlugin/FileContentIndex/e83b037b-7262-4c7f-9ef8-cb209702c9b4.vsidx
