--- a/TestPlugin.csproj
+++ b/TestPlugin.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="ASMATIX_API\API.cs" />
     <Compile Include="ASMATIX_API\Other.cs" />
+    <Compile Include="Mr_Over41\commands\Extra_Call.cs" />
     <Compile Include="Mr_Over41\commands\Home.cs" />
     <Compile Include="Mr_Over41\commands\Hud_Controll.cs" />
     <Compile Include="Mr_Over41\commands\Plugin_Updater.cs" />
