--- a/TestPlugin.csproj
+++ b/TestPlugin.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ASMATIX_API\API.cs" />
+    <Compile Include="ASMATIX_API\Eums.cs" />
     <Compile Include="ASMATIX_API\Other.cs" />
     <Compile Include="Mr_Over41\commands\Extra_Call.cs" />
     <Compile Include="Mr_Over41\commands\Home.cs" />
@@ -98,10 +99,13 @@
     <Compile Include="Mr_Over41\Item\Water.cs" />
     <Compile Include="Mr_Over41\Item\WtfGranate.cs" />
     <Compile Include="Mr_Over41\Lobby\Lobby_Fix.cs" />
+    <Compile Include="Mr_Over41\Roles\Fixed_Roles\Scp3114Fix.cs" />
     <Compile Include="Mr_Over41\Roles\SCP-035.cs" />
+    <Compile Include="Mr_Over41\Roles\SCP-080.cs" />
     <Compile Include="Mr_Over41\Roles\SCP-343.cs" />
     <Compile Include="Mr_Over41\Roles\GlabalP.cs" />
     <Compile Include="Loader.cs" />
+    <Compile Include="Mr_Over41\Roles\SCP3114Fix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mr_Over41\Roles\SCP-689.cs" />
   </ItemGroup>
